--- a/templates/events/reg_events.html
+++ b/templates/events/reg_events.html
@@ -20,7 +20,7 @@
     {% if not is_registered %}
         <button type="submit" class="btn btn-outline-primary btn-lg mx-auto d-block mx-5" >Записаться</button>
     {% else %}
-        <button type="submit" class="btn btn-secondary btn-lg mx-auto d-block mx-5">Отписаться</button>
+        <button type="submit" class="btn btn-secondary btn-lg mx-auto d-block mx-5">Отменить запись</button>
     {% endif %}
 
 </form>
