--- a/templates/events/reg_events.html
+++ b/templates/events/reg_events.html
@@ -18,9 +18,29 @@
     {% endif %}
 
     {% if not is_registered %}
-        <button type="submit" class="btn btn-outline-primary btn-lg mx-auto d-block mx-5" >Записаться</button>
+        <button type="submit" class="btn btn-outline-primary btn-lg mx-auto d-block mx-5"  >Записаться</button>
     {% else %}
-        <button type="submit" class="btn btn-secondary btn-lg mx-auto d-block mx-5">Отменить запись</button>
+        <button type="button" class="btn btn-secondary btn-lg mx-auto d-block mx-5" data-bs-toggle="modal" data-bs-target="#exampleModal">
+      Отменить запись
+    </button>
     {% endif %}
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Отмена записи</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        Вы точно хотите отменить запись на мероприятие?
+      </div>
+      <div class="modal-footer">
 
+        <button type="submit" class="btn btn-secondary mx-auto d-block mx-5">Отменить запись</button>
+      </div>
+    </div>
+  </div>
+</div>
 </form>
+
