--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
                     <ul class="navbar-nav mr-auto ">
                         {% if request.user.is_authenticated %}
                         <li class="nav-item ">
-                                 <a href="/" class="nav-link px-3  link-dark h5 ">{{ user.first_name }}</a>
+                                 <a href="{% url 'profile' %}" class="nav-link px-3  link-dark h5 ">{{ user.first_name }}</a>
                              </li>
                            <li class="nav-item ">
                                 <a href="{% url 'logout' %}" class="nav-link px-3  link-dark h5">Выйти</a>
@@ -47,11 +47,28 @@
         </div>
         </div>
 
+
     </nav>
 
+        {% if messages %}
+            {% for message in messages %}
+                {% if message.tags == 'error' %}
+                    <div class="alert alert-danger text-center  " style="margin-bottom: 0" role="alert">
+                        {{ message }}
+                    </div>
+                {% else %}
+                    <div class="alert alert-{{ message.tags }} text-center" style="margin-bottom: 0" role="alert">
+                      {{ message }}
+                    </div>
+                {% endif %}
+            {% endfor %}
+        {% endif %}
+
         <div class="bg-image" style="background: url({% static 'backgroung.png' %}) repeat-y top center; background-size: 100% auto;padding-bottom: 40px">
+
         {% block content %}{% endblock %}
         </div>
+
 
         <footer class="text-center text-lg-start bg-light text-muted">
   <!-- Section: Social media -->
