--- a/templates/events/events.html
+++ b/templates/events/events.html
@@ -15,7 +15,7 @@
         {% for item in events %}
         {% if item.is_published %}
 
-            <div class="card" style="width: 600px; margin-top: 35px; display: block;margin-left: auto;margin-right: auto;padding-top: 25px">
+            <div class="card" style="width: 600px; margin-top: 35px; display: block;margin-left: auto;margin-right: auto;padding-top: 25px; border-radius: 25px;">
             {% if item.photo%}
               <img src="{{ item.photo.url }}" class="card-img-top rounded mx-auto d-block mx-5" alt="" style="margin-top:10px;width: 530px">
             {% endif %}
