--- a/templates/events/events.html
+++ b/templates/events/events.html
@@ -4,6 +4,50 @@
 {% endblock %}
 {% block content %}
 
+     <style>
+
+#myBtn {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  background-color: #ced4ee;
+  color: black;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 4px;
+}
+
+#myBtn:hover {
+  background-color: #555;
+}
+</style>
+    <button onclick="topFunction()" id="myBtn" title="Go to top">Вверх</button>
+
+
+<script>
+// When the user scrolls down 20px from the top of the document, show the button
+window.onscroll = function() {scrollFunction()};
+
+function scrollFunction() {
+    if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+        document.getElementById("myBtn").style.display = "block";
+    } else {
+        document.getElementById("myBtn").style.display = "none";
+    }
+}
+
+// When the user clicks on the button, scroll to the top of the document
+function topFunction() {
+    document.body.scrollTop = 0;
+    document.documentElement.scrollTop = 0;
+}
+</script>
+
     <div class="p-3"   style="background-color: #fafafa;" >
         <div class="container  mb-4 mt-3"  >
                 <H1 >Мероприятия</H1>
@@ -17,20 +61,24 @@
 
             <div class="card" style="width: 600px; margin-top: 35px; display: block;margin-left: auto;margin-right: auto;padding-top: 25px; border-radius: 25px;">
             {% if item.photo%}
-              <img src="{{ item.photo.url }}" class="card-img-top rounded mx-auto d-block mx-5" alt="" style="margin-top:10px;width: 530px">
+              <img src="{{ item.photo.url }}" class="img-fluid rounded mx-auto d-block mx-5" alt="" style="margin-top:10px;width: 530px">
             {% endif %}
               <div class="card-body">
                 <h5 class="card-title">{{ item.title }}</h5>
+
                 {% autoescape off %}
                     <p class="card-text">{{ item.content|safe|truncatewords:20}}</p>
                 {% endautoescape %}
-              <div class="border-top" style="padding-top: 1em;padding-bottom: 1em">
-                 <p class="card-text" style="font-size: 16px" ><strong>Начало: </strong>{{ item.start_date}}</p>
+
+              <div class="border-top" style="padding-top: 1em;padding-bottom: 1em;">
+
+                 <p class="card-text align-items-end" style="font-size: 16px" ><strong>Начало: </strong>{{ item.start_date}}</p>
 
 
               </div>
                 <a href="{% url 'view_events' item.pk%}" class="btn btn-outline-primary mx-auto d-block mx-5">Узнать подробности и записаться</a>
               </div>
+
             </div>
 
 
