--- a/templates/home_page.html
+++ b/templates/home_page.html
@@ -4,6 +4,51 @@
 Формула добра
 {% endblock %}
 {% block content %}
+
+
+     <style>
+
+#myBtn {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  background-color: #ced4ee;
+  color: black;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 4px;
+}
+
+#myBtn:hover {
+  background-color: #555;
+}
+</style>
+    <button onclick="topFunction()" id="myBtn" title="Go to top">Вверх</button>
+
+
+<script>
+// When the user scrolls down 20px from the top of the document, show the button
+window.onscroll = function() {scrollFunction()};
+
+function scrollFunction() {
+    if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+        document.getElementById("myBtn").style.display = "block";
+    } else {
+        document.getElementById("myBtn").style.display = "none";
+    }
+}
+
+// When the user clicks on the button, scroll to the top of the document
+function topFunction() {
+    document.body.scrollTop = 0;
+    document.documentElement.scrollTop = 0;
+}
+</script>
         <header class="bg-light py-5" style="background: url(https://sun9-5.userapi.com/impf/Nsv7h6LgMvUSZ2HdVs-MriYmDMOr7XggdSvMJg/cj-P2kkDW0Y.jpg?size=2560x853&quality=96&sign=3359e2f507fb9aa5b4d90a17c3ec6a35&type=album) center;background-size: auto;">
             <div class="container px-5">
                 <div class="row gx-5 justify-content-center">
@@ -152,7 +197,6 @@
             <div class="container px-5 my-5 px-5">
                 <div class="text-center mb-5">
                     <h2 class="fw-bolder">Что даёт волонтёрство?</h2>
-                    <p class="lead mb-0">Our customers love working with us</p>
                 </div>
                 <div class="row gx-5 justify-content-center">
                     <div class="col-lg-6">
@@ -221,7 +265,7 @@
             </div>
         </section>
         <!-- Contact section-->
-        <section class="bg-light py-5">
+        <section class="bg-light py-5 " >
             <div class="container px-5 my-5 px-5">
                 <div class="text-center mb-5">
                     <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-envelope"></i></div>
@@ -259,7 +303,7 @@
                             </div>
 
                             <!-- Submit Button-->
-                            <div class="d-grid"><button class="btn btn-primary btn-lg" id="submitButton" type="submit">Отправить</button></div>
+                            <div class="d-grid"><button class="btn btn-primary btn-lg" id="submitButton" type="submit" >Отправить</button></div>
                         </form>
                     </div>
                 </div>
