--- a/templates/accounts/profile.html
+++ b/templates/accounts/profile.html
@@ -61,7 +61,13 @@
               <div class="card">
                 <div class="card-body">
                   <div class="d-flex flex-column align-items-center text-center">
-                    <img src="https://polimed.by/upload/iblock/661/66170d090fe9f213aec496c659767fb5.jpg" alt="Admin" class="rounded-circle" width="300">
+                    {% if user.avatar%}
+
+              <img src="{{ user.avatar.url }}" alt="" class="rounded-circle" width="300">
+                {% else %}
+
+                  <img src="https://polimed.by/upload/iblock/661/66170d090fe9f213aec496c659767fb5.jpg"  class="rounded-circle" width="300" alt="">
+              {% endif %}
                     <div class="mt-3">
                       <h4>{{ user.first_name }} {{ user.last_name }}</h4>
                     </div>
